--- a/app/views/hearings/pages/channel.html
+++ b/app/views/hearings/pages/channel.html
@@ -46,7 +46,7 @@ Case details
                                                     <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
                                                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                                             <h3 class="govuk-fieldset__heading">
-                                                                Select any parties who want to call/video into the hearing
+                                                                Select any parties who want to attend the hearing remotely, for example by phone
                                                             </h3>
                                                         </legend>
                                                         <div class="govuk-checkboxes" data-module="govuk-checkboxes">
@@ -102,7 +102,7 @@ Case details
                                 <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                         <h3 class="govuk-fieldset__heading">
-                                            Select parties who want to be absent for the hearing
+                                            Select any parties who do not want to attend the hearing
                                         </h3>
                                     </legend>
                                     <div class="govuk-checkboxes" data-module="govuk-checkboxes">
