--- a/app/views/hearings/pages/checkyouranswers.html
+++ b/app/views/hearings/pages/checkyouranswers.html
@@ -80,7 +80,7 @@ Case details
 
 
 
-                                        <h2 class="govuk-heading-m">Needs for each party</h2>
+                                        <h2 class="govuk-heading-m">Hearing requirements</h2>
 
 
                                         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
@@ -578,7 +578,7 @@ Case details
                                             </dl>
 
 
-                                            <h2 class="govuk-heading-m">Welsh</h2>
+                                            <h2 class="govuk-heading-m">Any other requirements</h2>
 
                                             <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                                                 <div class="govuk-summary-list__row">
@@ -823,7 +823,7 @@ Case details
         <p style="margin-bottom:0px;">Confirmed hearing <br>(Final data and additional data)</p>
         <select style="height:25px;" onchange="window.location.href='?'+this.value">
 
-            <option value="viewingconfirmedhearing=false&"
+            <option value="viewingconfirmedhearing=false&dateradios=Yes&firstdateoutputtext=1 December 2021&"
                     {% if data['viewingconfirmedhearing'] != 'true' %} selected  {% endif %}
             >Pending</option>
 
