--- a/app/views/hearings/pages/confirmation.html
+++ b/app/views/hearings/pages/confirmation.html
@@ -18,13 +18,13 @@ Case details
                 <div class="govuk-tabs__panel" id="event" style="padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
 
 
-                    <h2 class="govuk-heading-m"> Soemthing went wrong</h2>
+                    <h2 class="govuk-heading-m">Something went wrong </h2>
 
                     <p class="govuk-body">
-                         Placeholder advice to help user comnplete their task.
+                        Your hearing request has not been processed.
                     </p>
 
-                    <p><a href="#">Link to complete task</a></p>
+                    <p><a href="#">Try again</a></p>
 
 
 
@@ -52,7 +52,7 @@ Case details
                             </p>
 
                             <p class="govuk-body">
-                                <a href="/hearings/pages/casedetailsdivorce?submissioncomplete=true&" class="govuk-link">View case</a>
+                                <a href="/hearings/pages/casedetailsdivorce?submissioncomplete=true&justsubmitted=true&aftertenbmins=false&" class="govuk-link">View case</a>
                             </p>
                         </div>
 
