--- a/app/views/hearings/pages/language.html
+++ b/app/views/hearings/pages/language.html
@@ -14,7 +14,7 @@ Case details
 
                 <a href="#" class="govuk-back-link govuk-!-margin-bottom-6" onclick="goBack();">Back</a>
 
-                        <h2 class="govuk-heading-m">Does the hearing have any other requirements?</h2>
+                        <h2 class="govuk-heading-m">Are there any other requirements for the hearing?</h2>
 
                         <form
                             name="aspnetForm"
