--- a/app/views/hearings/pages/paneldifferent.html
+++ b/app/views/hearings/pages/paneldifferent.html
@@ -77,13 +77,13 @@ Case details
                                                             <div class="govuk-radios__item">
                                                                 <input class="govuk-radios__input" id="judgecontract2" name="judgecontract" type="radio" value="Tribunal Judge - salaried"  {% if data.judgecontract == 'Tribunal Judge - salaried' %}  Checked {% endif %} >
                                                                 <label class="govuk-label govuk-radios__label" for="judgecontract2">
-                                                                    Tribunal Judge - salaried
+                                                                    Tribunal Judge - Salaried
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-radios__item">
                                                                 <input class="govuk-radios__input" id="judgecontract3" name="judgecontract" type="radio" value="Tribunal Judge - fee-paid" {% if data.judgecontract == 'Tribunal Judge - fee-paid' %}  Checked {% endif %} >
                                                                 <label class="govuk-label govuk-radios__label" for="judgecontract3">
-                                                                    Tribunal Judge - fee-paid
+                                                                    Tribunal Judge - Fee-Paid
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-radios__item">
