--- a/app/views/hearings/pages/startrequest.html
+++ b/app/views/hearings/pages/startrequest.html
@@ -39,7 +39,7 @@ Case details
                             -->
                             {% if data.caseflagshidden != 'true' %}
                                 <div class="govuk-inset-text">
-                                    Case flags: Potentially Violent
+                                    Case flags: Potentially violent
                                 </div>
                             {% endif %}
 
@@ -57,7 +57,7 @@ Case details
                                     <fieldset class="govuk-fieldset">
                                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                                             <h1 class="govuk-fieldset__heading">
-                                                What is the stage of this hearing?
+                                                What stage is this hearing at?
                                             </h1>
                                         </legend>
                                         <div class="govuk-radios">
