--- a/app/views/hearings/pages/confirmcancel.html
+++ b/app/views/hearings/pages/confirmcancel.html
@@ -16,7 +16,7 @@ Case details
         <div class="govuk-tabs__panel" id="event" style="padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
 
 
-            <h2 class="govuk-heading-m">Are you sure you want to delete this hearing</h2>
+            <h2 class="govuk-heading-m">Are you sure you want to cancel this hearing?</h2>
 
             <form
                     name="aspnetForm"
@@ -25,9 +25,9 @@ Case details
                     autocomplete="off"
             >
 
+                <p>The hearing will not be scheduled and the details deleted. </p>
 
-
-                <p>Jane Smith v DWP </p>
+                <p>Jane Smith v DWP</p>
 
                 <p>Hearing date: 21 January 2022</p>
 
@@ -35,7 +35,7 @@ Case details
 
                 <div class="govuk-form-group  govuk-!-margin-top-7 govuk-!-margin-bottom-0" >
                     <button class="govuk-button" data-module="govuk-button">
-                        Pemernantly delete
+                        Cancel hearing
                     </button>
                 </div>
 
@@ -43,7 +43,7 @@ Case details
             </form>
 
 
-            <p><a href="casedetailsdivorce">Don't delete</a></p>
+            <p><a href="casedetailsdivorce">Do not cancel hearing</a></p>
 
 
         </div>
