--- a/app/views/hearings/pages/confirmchangesubmission.html
+++ b/app/views/hearings/pages/confirmchangesubmission.html
@@ -30,7 +30,7 @@ Case details
 
                 <div class="govuk-form-group  govuk-!-margin-top-7 govuk-!-margin-bottom-0" >
                     <button class="govuk-button" data-module="govuk-button">
-                        Yes - Submit
+                        Confirm
                     </button>
                 </div>
 
