--- a/app/views/hearings/testing.html
+++ b/app/views/hearings/testing.html
@@ -19,10 +19,11 @@
 
         <p>Links open in a new tab.</p>
 
-        <p><a target="_blank" href="/hearings/first">Scenario 1</a></p>       <!-- First hearing</a></p> -->
 
-        <p><a target="_blank" href="/hearings/firstalt">Scenario 2</a></p>       <!--First hearing alternative</a></p>-->
 
+        <p><a target="_blank" href="/hearings/firstalt">Version A - No hearings / Request a first hearing</a></p>       <!--First hearing alternative</a></p>-->
+
+        <p><a target="_blank" href="/hearings/first">Version B - No hearings / Request a first hearing</a></p>       <!-- First hearing</a></p> -->
 
         <p><a target="_blank" href="/hearings/after10mins">Scenario 3</a></p>       <!--After 10 mins</a></p>-->
 
