judges view only.  Duplicate pages with judge header from end of august

--- a/app/views/hearings/index.html
+++ b/app/views/hearings/index.html
@@ -75,8 +75,14 @@
 
         <br>
         <br>
+        <br>
+        <br>
 
 
+        <p><span class="govuk-!-font-weight-bold">Judges view</span>
+            <br>Links open in a new tab.</p>
+
+        <p><a target="_blank" href="/hearings/judgesview">Hearings tab</a></p>
 
         <!--
 
